--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>丁美丽的主页</title>
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <script src="js/jquery-3.3.1.js"></script>
 </head>
