--- a/muxidiban/common-html/gongshi.html
+++ b/muxidiban/common-html/gongshi.html
@@ -1,11 +1,11 @@
-<div class="b-top "><img src="../images/aboutus_banner.jpg" alt=""></div>
+﻿<div class="b-top "><img src="../images/aboutus_banner.jpg" alt=""></div>
 <div class="container">
     <div class="title2 ">
         <p>关于木兮</p>            
     </div>
     <div class="about">
         <div class="col-md-6 col-sm-12">
-            <iframe src="http://map.baidu.com" ></iframe>
+            <iframe src="https://map.baidu.com" ></iframe>
         </div>
         <div class="col-md-6 col-sm-12">
             <p>木兮地板由著名的湖北百诺木业有限公司监制出品。木兮地板秉承了百诺木业一贯的品质，将严谨的作风
