--- a/muxidiban/common-html/jiameng.html
+++ b/muxidiban/common-html/jiameng.html
@@ -1,4 +1,4 @@
-<div class="b-top ">
+﻿<div class="b-top ">
     <img src="images/joinus_banner.jpg" alt="">
 </div>
 <div class="container">
@@ -9,7 +9,7 @@
 <div class="jiameng row">
     <div class="tiaojian row" >
         <div class="j-left col-md-6 col-sm-12 row">
-            <div><img src="../images/logo4.png"></div>
+            <div><img src="images/logo4.png"></div>
             <div>
                 <h>加盟条件</h>
                 <p>Condition of joining</p>
