--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -45,47 +45,47 @@
             <div class="xc">
                 <div class="x-center">
                     <a href="https://dingmeili.gitee.io/gerenwangye">
-                        <img src="images/11.jpg" alt="丁美丽" class="zu"/>                   
+                        <img src="images/11.jpg" alt="AA" class="zu"/>                   
                     </a>
                 </div>
-                <h>丁美丽:</h>
+                <h>AA:</h>
                 <p>一定要在平庸无奇的人生里做一个闪亮发光的疯子</p>
             </div>
             <div class="xb ">
                 <div class="x-c">
-                    <a href="http://lvxiangzhong.gitee.io/task">
-                        <img src="images/14.jpg" alt="吕相忠"class="zu" />
+                    <a href="#">
+                        <img src="images/14.jpg" alt="AA"class="zu" />
                     </a> 
                 </div>
-                <h>吕相忠:</h>
-                <p>靠谱的人千篇一律，不靠谱的人各掉各的链子。你好，我是吕相忠</p>              
+                <h>AA:</h>
+                <p>靠谱的人千篇一律，不靠谱的人各掉各的链子。你好，我是AA</p>              
             </div>
             <div class="xb ">
                 <div class="x-c">
-                    <a href="https://ps1026.gitee.io/graduation">
-                        <img src="images/13.jpg" alt="平帅"class="zu" />
+                    <a href="#">
+                        <img src="images/13.jpg" alt="AA"class="zu" />
                     </a>
                 </div>
-                <h>平帅:</h>
-                <p>生活有度，人生添寿。你好，我是平帅</p>              
+                <h>AA</h>
+                <p>生活有度，人生添寿。你好，我是AA</p>              
             </div>
             <div class="xb ">
                 <div class="x-c">
-                    <a href="https://chen_yating.gitee.io/gerenwangye">
-                        <img src="images/12.jpg" alt="陈雅婷"class="zu" /> 
+                    <a href="#">
+                        <img src="images/12.jpg" alt="AA"class="zu" /> 
                     </a> 
                 </div>  
-                <h>陈雅婷:</h>
+                <h>AA:</h>
                 <p> 我想做一个漂亮的女孩，更想成为一个相处起来让人觉得[漂亮只是最小一个优点]的女孩</p>           
             </div>            
             <div class="xb ">
                 <div class="x-c">
-                    <a href="https://gao1123.gitee.io/task">
-                        <img src="images/15.jpg" alt="高惠勒" class="zu"/>
+                    <a href="#">
+                        <img src="images/15.jpg" alt="AA" class="zu"/>
                     </a> 
                 </div> 
-                <h>高惠勒:</h>
-                <p>生活，可以简单点。世界，可以广阔点。你好，我是高惠勒。</p>           
+                <h>AA</h>
+                <p>生活，可以简单点。世界，可以广阔点。你好，我是AA。</p>           
             </div>
         </div>
         <div class="name">
