--- a/家居生活/index.html
+++ b/家居生活/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>生活家居</title>
+    <title>家居生活</title>
     <link rel="stylesheet" type="text/css" href="shenghuojiaju.css">
 </head>
 <body>
